# c-monkeylang

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  ast.c  ast.h  lexer.c  lexer.h  repl.c  token.c  token.h
test/: CMakeLists.txt  test_ast.c  test_lexer.c  test_token.c
